# pgrow2serde

./: .rustfmt.toml  Cargo.toml
examples/: readme-async.rs  readme-sync.rs
src/: de.rs  lib.rs  raw.rs
src/de/: error.rs
